list/style.css
body {
    background-color: #f1f1f1;
}

section {
    background-color: #fff;
    padding: 30px;
    font-family: 'Lato', 'Helvetica', sans-serif;
    font-weight: 400;
    font-size: 18px;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    max-width: 600px;
}

h1 {
    font-family: 'Rubik', 'Helvetica', sans-serif;
    font-weight: 400;
    font-size: 58px;
    margin: 0px;
}

a, a:active, a:focus, a:hover, .expired {
    display: inline-block;
    margin-left: 1em;
    text-indent: -1em;
    word-wrap: break-word;
    color: #1fd9b7;
    text-decoration: none;
}

a:active, a:focus, a:hover {
    outline: none;
}

.small {
    font-size: 14px;
    color: #909090;
}

.small a {
    font-weight: 700;
}

span.expired {
    text-decoration: line-through;
    color: #ccc;
    cursor: default;
}

